Auth Login And Register

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -20,7 +20,9 @@
     "./providers/AppProvider",
     "@adonisjs/core",
     "@adonisjs/lucid",
-    "@adonisjs/view"
+    "@adonisjs/view",
+    "@adonisjs/auth",
+    "@adonisjs/session"
   ],
   "metaFiles": [
     {
