--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "youch-terminal": "^2.1.5"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.3.0",
+    "@adonisjs/session": "^6.4.0",
     "@adonisjs/view": "^6.2.0",
     "luxon": "^3.2.1",
     "mysql2": "^3.0.1",
+    "phc-argon2": "^1.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
